<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="163dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BTN7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add"
                />

            <Button
                android:id="@+id/BTN8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="eightBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTN9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="nineBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <ImageButton
                android:id="@+id/bkspBTN"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_marginTop="207dp"
                android:background="@drawable/button"
                android:contentDescription="@string/clear"
                android:onClick="bkspBTN"
                app:srcCompat="@android:drawable/ic_input_delete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTN5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="fiveBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTN6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="sixBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTNadd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="oneTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTN2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="twoBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTN3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="threeBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTNmul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="mulBTN"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTNdiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="divBTN"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTN0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="zeroBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTNsub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="subBTN"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/BTNeql"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/eql"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="eqlBTN"
                app:backgroundTint="#E36C1E"
                app:backgroundTintMode="src_over" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:autofillHints="false"
        android:background="#9dc77a"
        android:gravity="bottom|end"
        android:inputType="none"
        android:paddingTop="20dp"
        android:text="@string/enterText"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/clearBTN"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:onClick="clearBTN"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>